crates/keron-lang/tests/corpus/errors/check/for_non_iterable.keron
val n: Int = 5

for x in n {
  reconcile x
}
